feat: ui changes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,29 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --color-primary: #192655;
+  --color-secondary: #a2aadb;
+  --color-accent: #c0c9ee;
+  --color-warning: #ff7043;
+  --color-bg-white: #f9fcfb;
+  --color-bg-dark: #121212;
+  --color-bg-light: #1e1e2e;
+  --color-bg-main: #fff2eb;
+  --color-bg-pink: #ffaaaa;
+  --color-bg-orange: #ffe99a;
+  --color-bg-purple: #c0c9ee;
+  --color-surface: #040405;
+  --color-text-main: #e0e0e0;
+  --color-text-muted: #a0a0a0;
+  --color-tag-bg: var(--color-accent);
+  --color-tag-text: #1a1a1a;
+  --color-scrollbar: #444;
+  --color-border-white: #eaefef;
+  --color-status: #15b392;
+  --color-status-error: #e6521f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
